# hello_cuda_opengl_sdl_cmake

./: CMakeLists.txt  CMakeLocals.txt  CMakeSettings.json  README.md  hello.cu  hello.h  main.cpp
